--- a/css/demo.css
+++ b/css/demo.css
@@ -37,7 +37,7 @@ body {
 .xdsoft_datetimepicker  .xdsoft_mounthpicker:before,.eq_cdata > p:after,.eq_cdata h2:after,.grjj_c>div h2:after,.hpl_top:before,.sqfy_in:before,.doc_iBtm:after,.mcjcrw:after,.mc_jl:after,.jr_top:after,.log_top:after,.login_in:after,.forget_box:after{background-image: -webkit-linear-gradient(top, #ddd, #ddd 0%, transparent 0%),
         -webkit-linear-gradient(right, #ddd, #ddd 0%, transparent 0%),
         -webkit-linear-gradient(bottom, #ddd, #ddd 60%, transparent 60%),
-        -webkit-linear-gradient(left, #ddd, #ddd 0%, transparent 0%);  
+        -webkit-linear-gradient(left, #ddd, #ddd 0%, transparent 0%);
     background-image: linear-gradient(top, #ddd, #ddd 0%, transparent 0%),
         linear-gradient(right, #ddd, #ddd 0%, transparent 0%),
        linear-gradient(bottom, #ddd, #ddd 60%, transparent 60%),
@@ -48,17 +48,17 @@ body {
   background-image: -webkit-linear-gradient(top, #ddd, #ddd 60%, transparent 60%),
         -webkit-linear-gradient(right, #ddd, #ddd 0%, transparent 0%),
         -webkit-linear-gradient(bottom, #ddd, #ddd 0%, transparent 0%),
-        -webkit-linear-gradient(left, #ddd, #ddd 0%, transparent 0%);  
+        -webkit-linear-gradient(left, #ddd, #ddd 0%, transparent 0%);
     background-image: linear-gradient(top, #ddd, #ddd 60%, transparent 60%),
         linear-gradient(right, #ddd, #ddd 0%, transparent 0%),
        linear-gradient(bottom, #ddd, #ddd 0%, transparent 0%),
-        linear-gradient(left, #ddd, #ddd 0%, transparent 0%);  
+        linear-gradient(left, #ddd, #ddd 0%, transparent 0%);
 }
 /* right   __   ddd */
 .doc_iBtm>div:after,.jct_iwd > div:nth-of-type(1):before,.doc_top>div:before{background-image: -webkit-linear-gradient(top, #ddd, #ddd 0%, transparent 0%),
         -webkit-linear-gradient(right, #ddd, #ddd 60%, transparent 60%),
         -webkit-linear-gradient(bottom, #ddd, #ddd 0%, transparent 0%),
-        -webkit-linear-gradient(left, #ddd, #ddd 0%, transparent 0%);  
+        -webkit-linear-gradient(left, #ddd, #ddd 0%, transparent 0%);
     background-image: linear-gradient(top, #ddd, #ddd 0%, transparent 0%),
         linear-gradient(right, #ddd, #ddd 60%, transparent 60%),
        linear-gradient(bottom, #ddd, #ddd 0%, transparent 0%),
@@ -70,7 +70,7 @@ body {
 .eq_item:before,.grjj_c:before,.hpl_box:after,.sqfy_item:before,.doc_item:after,.login_item:after{background-image: -webkit-linear-gradient(top, #ddd, #ddd 60%, transparent 60%),
         -webkit-linear-gradient(right, #ddd, #ddd 0%, transparent 0%),
         -webkit-linear-gradient(bottom, #ddd, #ddd 60%, transparent 60%),
-        -webkit-linear-gradient(left, #ddd, #ddd 0%, transparent 0%);  
+        -webkit-linear-gradient(left, #ddd, #ddd 0%, transparent 0%);
     background-image: linear-gradient(top, #ddd, #ddd 60%, transparent 60%),
         linear-gradient(right, #ddd, #ddd 0%, transparent 0%),
        linear-gradient(bottom, #ddd, #ddd 60%, transparent 60%),
@@ -81,7 +81,7 @@ body {
 .rib_item >p:before{background-image: -webkit-linear-gradient(top, #5fc7bc, #5fc7bc 0%, transparent 0%),
         -webkit-linear-gradient(right, #5fc7bc, #5fc7bc 60%, transparent 60%),
         -webkit-linear-gradient(bottom, #5fc7bc, #5fc7bc 0%, transparent 0%),
-        -webkit-linear-gradient(left, #5fc7bc, #5fc7bc 0%, transparent 0%);  
+        -webkit-linear-gradient(left, #5fc7bc, #5fc7bc 0%, transparent 0%);
     background-image: linear-gradient(top, #5fc7bc, #5fc7bc 0%, transparent 0%),
         linear-gradient(right, #5fc7bc, #5fc7bc 60%, transparent 60%),
        linear-gradient(bottom, #5fc7bc, #5fc7bc 0%, transparent 0%),
@@ -91,7 +91,7 @@ body {
 .jl_top:before{background-image: -webkit-linear-gradient(top, #fff, #fff 0%, transparent 0%),
         -webkit-linear-gradient(right, #fff, #fff 0%, transparent 0%),
         -webkit-linear-gradient(bottom, #fff, #fff 60%, transparent 60%),
-        -webkit-linear-gradient(left, #fff, #fff 0%, transparent 0%);  
+        -webkit-linear-gradient(left, #fff, #fff 0%, transparent 0%);
     background-image: linear-gradient(top, #fff, #fff 0%, transparent 0%),
         linear-gradient(right, #fff, #fff 0%, transparent 0%),
        linear-gradient(bottom, #fff, #fff 60%, transparent 60%),
@@ -106,7 +106,7 @@ html{font-size: 50px;}
 @media screen and (min-width:375px) {html{font-size: 58.5px;}}
 @media screen and (min-width:414px) {html{font-size: 64.6px;}}
 
-.boosIc,.cale_btm>p,.xdsoft_mounthpicker em,.xdsoft_mounthpicker .rIc,.eq_cdata > p:before,.eq_sz em:after,.ljyy_box .yy_gz:before,.ljyy_box .yy_link:before,.hpl_topI.hpl_topI1:before,.hpl_topI.hpl_topI2:before,.yyys_l:before,.yyys_r:before,.yyys_tit em,.doc_iFy:before,.doc_iYy:before,.jct_iwd > div:after,.jrr_tt2 em.zdIc:before,.zcty p.cur:before,.forgetIc:after,.jc_ic,.jrdt_t i,.doc_itemL:after,.yydt_ttx:after,.jr_top em,.bzjl span:before,.log_top em,.login_footer .fIc:before,.doc_search > div:before{background: url(../images/icons.png) no-repeat;background-size:4rem auto;}
+.boosIc_c,.cale_btm>p,.xdsoft_mounthpicker em,.xdsoft_mounthpicker .rIc,.eq_cdata > p:before,.eq_sz em:after,.ljyy_box .yy_gz:before,.ljyy_box .yy_link:before,.hpl_topI.hpl_topI1:before,.hpl_topI.hpl_topI2:before,.yyys_l:before,.yyys_r:before,.yyys_tit em,.doc_iFy:before,.doc_iYy:before,.jct_iwd > div:after,.jrr_tt2 em.zdIc:before,.zcty p.cur:before,.forgetIc:after,.jc_ic,.jrdt_t i,.doc_itemL:after,.yydt_ttx:after,.jr_top em,.bzjl span:before,.log_top em,.login_footer .fIc:before,.doc_search > div:before{background: url(../images/icons.png) no-repeat;background-size:4rem auto;}
 .bg_gray{background: #f1f1f1;}
 
 /*监测*/
@@ -134,7 +134,27 @@ background: -webkit-linear-gradient(top ,#5ec6ba ,#13a090 100%);
 .mcjcrw canvas{position: absolute;left: .3rem;top: .45rem;width: .9rem;height: .9rem;}
 .mc_sjbq{width: 1.5rem;line-height: 1;color: #13a090;font-size: .2rem;position: absolute;right: .22rem;bottom: .6rem;z-index: 2;text-align: right;}
 .mc_jl{padding: .28rem .2rem .28rem .4rem;line-height: 1;color: #ccc;font-size: .26rem;position: relative;}
-.boosIc{width: .59rem;height: .59rem;margin: 0 auto .16rem auto;border: none;display: block;background-position: -1.93rem -4.4rem;}
+.boosIc_c{width: .59rem;height: .59rem;margin: 0 auto .16rem auto;background-position: -1.93rem -4.4rem;}
+.boosIc{width: .59rem;height: .59rem;border: none;display: block;background-position: -1.93rem -4.4rem;border-radius: 100%;}
+.boosIc_c img{width: 100%;height: 100%;display: block;}
+.boosIc_c img.boos_fade{-webkit-animation: scaleout 1.3s infinite ease-in-out;animation: scaleout 1.3s infinite ease-in-out;}
+@-webkit-keyframes scaleout {
+    0% { -webkit-transform: scale(1.0) }
+    100% {
+        -webkit-transform: scale(1.15);
+        opacity: .2;
+    }
+}
+@keyframes scaleout {
+    0% {
+        transform: scale(1.0);
+        -webkit-transform: scale(1.0);
+    } 100% {
+          transform: scale(1.15);
+          -webkit-transform: scale(1.15);
+          opacity: .2;
+      }
+}
 
 /*监测-今日监测*/
 .jr_top{height: .8rem;line-height: .8rem;position: relative;background: #fff;margin-bottom: .14rem;text-align: center;color: #f5514c;font-size: .36rem;}
