--- a/css/demo.css
+++ b/css/demo.css
@@ -21,7 +21,7 @@ body {
 }
 .clearBth{ clear:both; overflow:hidden; height:0; font-size:0; line-height:0;}
 
-.xdsoft_datetimepicker  .xdsoft_mounthpicker:before,.eq_cdata > p:after,.eq_item:before,.grjj_c>div h2:after,.eq_cdata h2:after,.grjj_c:before,.hpl_top:before,.hpl_box:after,.sqfy_in:before,.sqfy_item:before,.doc_iBtm>div:after,.doc_iBtm:after,.doc_item:after,.jct_iwd > div:nth-of-type(1):before,.mcjcrw:after,.mc_jl:after,.jr_top:after,.rib_item >p:before,.jl_top:before,.log_top:after,.forget_box:after,.login_item:after,.login_in:after,.doc_top:before,.doc_top>div:before{
+.btm_nav:before,.xdsoft_datetimepicker  .xdsoft_mounthpicker:before,.eq_cdata > p:after,.eq_item:before,.grjj_c>div h2:after,.eq_cdata h2:after,.grjj_c:before,.hpl_top:before,.hpl_box:after,.sqfy_in:before,.sqfy_item:before,.doc_iBtm>div:after,.doc_iBtm:after,.doc_item:after,.jct_iwd > div:nth-of-type(1):before,.mcjcrw:after,.mc_jl:after,.jr_top:after,.rib_item >p:before,.jl_top:before,.log_top:after,.forget_box:after,.login_item:after,.login_in:after,.doc_top:before,.doc_top>div:before{
     content: '';
     position: absolute;
     top: 0;
@@ -41,6 +41,16 @@ body {
         linear-gradient(right, #ddd, #ddd 0%, transparent 0%),
        linear-gradient(bottom, #ddd, #ddd 60%, transparent 60%),
         linear-gradient(left, #ddd, #ddd 0%, transparent 0%);
+
+}
+.btm_nav:before{background-image: -webkit-linear-gradient(top, #ccc, #ccc 60%, transparent 60%),
+        -webkit-linear-gradient(right, #ccc, #ccc 0%, transparent 0%),
+        -webkit-linear-gradient(bottom, #ccc, #ccc 0%, transparent 0%),
+        -webkit-linear-gradient(left, #ccc, #ccc 0%, transparent 0%);  
+    background-image: linear-gradient(top, #ccc, #ccc 60%, transparent 60%),
+        linear-gradient(right, #ccc, #ccc 0%, transparent 0%),
+       linear-gradient(bottom, #ccc, #ccc 0%, transparent 0%),
+        linear-gradient(left, #ccc, #ccc 0%, transparent 0%);
 
 }
 .doc_top:before{
@@ -385,3 +395,18 @@ background: -ms-linear-gradient(left , #43c1c0 1% , #00777b 100%);
 background: -moz-linear-gradient(left , #43c1c0 1% , #00777b 100%);
 background: -webkit-linear-gradient(left , #43c1c0 1% , #00777b 100%);
 }
+
+/*底部导航*/
+.bg_menu{padding-bottom: 1.1rem;}
+.btm_nav{height: .98rem;background: #f9f9f9;position: relative;width: 100%;position: fixed;bottom: 0;left: 0;z-index: 20;}
+.btm_nav >a{width: 25%;float: left;margin-top: .14rem;font-size: .2rem;color: #777;line-height: 1;text-align: center;}
+.btm_nav >a:before{display: block;content: "";margin: 0 auto .1rem auto;}
+.btm_nav >a.cur{color: #5fc7bb;}
+.btm_nav >a.m1:before{width:.42rem;height: .46rem;background: url(../images/home_ic.png) no-repeat;background-size: .42rem auto;}
+.btm_nav >a.m2:before{width:.43rem;height: .46rem;background: url(../images/zhuli_ic.png) no-repeat;background-size: .43rem auto;}
+.btm_nav >a.m3:before{width:.49rem;height: .46rem;background: url(../images/find_ic.png) no-repeat;background-size: .49rem auto;}
+.btm_nav >a.m4:before{width:.44rem;height: .46rem;background: url(../images/person_ic.png) no-repeat;background-size: .44rem auto;}
+.btm_nav >a.m1.cur:before{background: url(../images/home_cur.png) no-repeat;background-size: .42rem auto;}
+.btm_nav >a.m2.cur:before{background: url(../images/zhuli_cur.png) no-repeat;background-size: .43rem auto;}
+.btm_nav >a.m3.cur:before{background: url(../images/find_cur.png) no-repeat;background-size: .49rem auto;}
+.btm_nav >a.m4.cur:before{background: url(../images/person_cur.png) no-repeat;background-size: .44rem auto;}
